pool test